auth view conditions

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-	<section class="auth-view">
+	<section class="auth-view show">
 		<div class="auth-section">
 			<h1>{ Your Task Tracker }</h1>
 			<div class="authenticate-choice">
@@ -33,7 +33,7 @@
 		</div>
 	</section>
 
-	<section class="todo-container">
+	<section class="todo-container hide">
 		<!-- Start: To Do Tasks -->
 		<header>
 			<label for="item" class="sr-only">Enter Item</label>
